fix: update to use gemini-1.5-flash (free tier model)

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ BASE_REF=
 HEAD_REF=
 
 # Analysis Configuration
-ANALYSIS_MODEL=gemini-pro
+ANALYSIS_MODEL=gemini-1.5-flash
 MIN_CHANGE_SIGNIFICANCE=medium  # low, medium, high
