feat: migrate from Gemini to Grok AI for code analysis

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # GitHub Configuration
 GITHUB_TOKEN=your_github_token_here
 
-# AI Service Configuration
-GEMINI_API_KEY=your_gemini_api_key_here
+# xAI Grok Configuration
+XAI_API_KEY=your_xai_api_key_here
 
 # PR Information (automatically set by GitHub Actions)
 PR_NUMBER=
@@ -11,5 +11,5 @@ BASE_REF=
 HEAD_REF=
 
 # Analysis Configuration
-ANALYSIS_MODEL=gemini-1.5-flash
+ANALYSIS_MODEL=grok-beta
 MIN_CHANGE_SIGNIFICANCE=medium  # low, medium, high
