--- a/.github/workflows/pr-analyzer.yml
+++ b/.github/workflows/pr-analyzer.yml
@@ -63,7 +63,7 @@ jobs:
         if: steps.check_changes.outputs.readme_only == 'false'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          XAI_API_KEY: ${{ secrets.XAI_API_KEY }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           REPO_NAME: ${{ github.repository }}
           BASE_REF: ${{ github.event.pull_request.base.ref }}
