--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # GitHub Configuration
 GITHUB_TOKEN=your_github_token_here
 
-# xAI Grok Configuration
-XAI_API_KEY=your_xai_api_key_here
+# Groq AI Configuration
+GROQ_API_KEY=your_groq_api_key_here
 
 # PR Information (automatically set by GitHub Actions)
 PR_NUMBER=
@@ -11,5 +11,5 @@ BASE_REF=
 HEAD_REF=
 
 # Analysis Configuration
-ANALYSIS_MODEL=grok-beta
+ANALYSIS_MODEL=llama-3.3-70b-versatile
 MIN_CHANGE_SIGNIFICANCE=medium  # low, medium, high
