fix: update permissions guide with UI settings instructions

--- a/.github/workflows/caller-example.yml
+++ b/.github/workflows/caller-example.yml
@@ -1,5 +1,10 @@
 name: PR Analyzer (Release to Main Only)
 
+# Add required permissions for the reusable workflow at the top level
+permissions:
+  contents: write        # Required to commit README updates
+  pull-requests: write   # Required to post PR comments
+
 # Only trigger when creating PR from release-* branch to main
 on:
   pull_request:
@@ -11,11 +16,6 @@ on:
 
 jobs:
   call-analyzer:
-    # Add required permissions for the reusable workflow
-    permissions:
-      contents: write        # Required to commit README updates
-      pull-requests: write   # Required to post PR comments
-    
     # Only run if:
     # 1. PR is targeting main branch
     # 2. Source branch starts with "release-" or "release/"
