--- a/.github/workflows/reusable-pr-analyzer.yml
+++ b/.github/workflows/reusable-pr-analyzer.yml
@@ -39,10 +39,11 @@ jobs:
           CHANGED_FILES=$(git diff --name-only origin/${{ github.event.pull_request.base.ref }}...HEAD)
           echo "Changed files: $CHANGED_FILES"
           
-          # Check if only README was changed
+          # Check if only README/docs were changed
           README_ONLY=true
           while IFS= read -r file; do
-            if [[ ! "$file" =~ ^README\.md$ ]]; then
+            # Check for README.md, or .readme files
+            if [[ ! "$file" =~ ^README\.md$ ]] && [[ ! "$file" =~ \.readme$ ]]; then
               README_ONLY=false
               break
             fi
@@ -112,7 +113,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
           if [[ -n $(git status -s) ]]; then
-            git add README.md
+            git add README.md Updates.readme Documentation.readme || true
             git commit -m "docs: update README based on PR changes [skip-pr-analyzer]"
             git push
             echo "✅ README updated and pushed"
