--- a/.github/workflows/reusable-pr-analyzer.yml
+++ b/.github/workflows/reusable-pr-analyzer.yml
@@ -113,10 +113,22 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
           if [[ -n $(git status -s) ]]; then
-            git add README.md Updates.readme Documentation.readme || true
-            git commit -m "docs: update README based on PR changes [skip-pr-analyzer]"
-            git push
-            echo "✅ README updated and pushed"
+            # Add files only if they exist
+            git add README.md 2>/dev/null || true
+            [ -f Updates.readme ] && git add Updates.readme
+            [ -f Documentation.readme ] && git add Documentation.readme
+            
+            # Check if anything is actually staged for commit
+            if [[ -n $(git diff --staged --name-only) ]]; then
+              git commit -m "docs: update README based on PR changes [skip-pr-analyzer]"
+              git push
+              echo "✅ README updated and pushed"
+            else
+              echo "ℹ️  No changes staged to commit (likely only untracked/ignored files)"
+            fi
+          else
+            echo "ℹ️ No changes to commit"
+          fi
           else
             echo "ℹ️ No changes to commit"
           fi
